--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
 :root {
   --max-width: 1100px;
+  background-color: #000;
+  --White-Base: #fff;
+  --Orange-Base: #f86600;
+  --Orange-Smooth: rgba(248, 102, 0, 0.15);
+  --gray-30: #e3e5e5;
 }
 
 * {
@@ -17,4 +22,24 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 2rem; /* 133.333% */
+}
+
+.bodyRegular {
+  line-height: 1.5rem;
+}
+
+.bodySmall {
+  font-size: 0.875rem;
+  line-height: 1.25rem; /* 142.857% */
+}
+
+.bodyMicro {
+  font-size: 0.75rem;
+  line-height: 1rem; /* 133.333% */
 }
