--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,13 @@ a {
   text-decoration: none;
 }
 
-.h2 {
+h1 {
+  font-size: 1.75rem;
+  font-weight: 700;
+  line-height: 2.25rem; /* 128.571% */
+}
+
+h2 {
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 2rem; /* 133.333% */
