feat: infinite scroll

--- a/src/components/AsteroidEntry/AsteroidEntry.module.css
+++ b/src/components/AsteroidEntry/AsteroidEntry.module.css
@@ -38,8 +38,7 @@
   composes: bodyRegular from global;
   color: #fff;
   text-align: center;
-
-  width: fit-content;
+  align-self: center;
 }
 
 .imageContainer {
