--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -3,7 +3,9 @@
   --White-Base: #fff;
   --Orange-Base: #f86600;
   --Orange-Smooth: rgba(248, 102, 0, 0.15);
+  --Red-Smooth: #f5ded9;
   --gray-30: #e3e5e5;
+  --Black-Pearl: #232526;
 }
 
 * {
@@ -15,11 +17,15 @@
 html,
 body {
   max-width: 100vw;
+  color: var(--White-Base, #fff);
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 h1 {
@@ -34,7 +40,14 @@ h2 {
   line-height: 2rem; /* 133.333% */
 }
 
+h3 {
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 1.5rem; /* 133.333% */
+}
+
 .bodyRegular {
+  font-size: 1rem;
   line-height: 1.5rem;
 }
 
