--- a/src/app/[lng]/page.module.css
+++ b/src/app/[lng]/page.module.css
@@ -1,43 +1,67 @@
 .main {
-  --gap-x: calc(100vw / 20);
+  --gap-x: 20px;
   --gap-y: calc(100vh / 8.5);
   --earth-height: calc(100vh - var(--gap-y) * 2);
   --earth-width: calc(var(--earth-height) * 0.7);
-  --feed-width: 280px;
+  --feed-width-base: 385px;
+  --feed-width: calc(var(--feed-width-base) - (440px - 100vw));
+  --left-shift: min(
+    100vw - var(--earth-width) - var(--feed-width) - var(--gap-x),
+    0px
+  );
 
   display: flex;
-  position: relative;
-  gap: var(--gap-x);
-  left: min(100vw - var(--earth-width) - var(--feed-width) - var(--gap-x), 0px);
+  flex-direction: column;
+}
+
+@media (min-width: 440px) {
+  .main {
+    --gap-x: calc(100vw / 22);
+    --feed-width: var(--feed-width-base);
+  }
 }
 
 @media (min-width: 576px) {
   .main {
-    --feed-width: 400px;
+    --left-shift: min(
+      100vw - var(--earth-width) - var(--feed-width) - var(--gap-x) - 9.375rem,
+      0px
+    );
+
+    flex-direction: row;
+  }
+}
+
+.earthAndFeedContainer {
+  display: flex;
+  position: relative;
+  left: var(--left-shift);
+  gap: var(--gap-x);
+}
+
+.cartContainer {
+  position: sticky;
+  bottom: 0px;
+}
+
+@media (min-width: 576px) {
+  .cartContainer {
+    position: relative;
+    left: var(--left-shift);
   }
 }
 
 .feedContainer {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   gap: 1.5rem;
-
-  flex: 0 0 var(--feed-width);
 }
 
 .headerContainer {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   gap: 0.5rem;
-  align-self: stretch;
-}
-
-.header {
-  align-self: stretch;
-
-  color: var(--White-Base, #fff);
+  width: var(--feed-width);
 }
 
 .earth {
