--- a/src/app/[lng]/layout.module.css
+++ b/src/app/[lng]/layout.module.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
 
-  background-image: url('../../../public/asteroid.png');
+  background-image: url('../../../public/asteroid.webp');
   background-repeat: no-repeat;
   background-attachment: fixed;
 
@@ -100,7 +100,7 @@
   position: sticky;
   top: var(--gap-y);
   margin-right: var(--gap-x);
-  background-image: url('../../../public/earth.png');
+  background-image: url('../../../public/earth.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: right;
